--- a/test-coverage/pom.xml
+++ b/test-coverage/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>root</artifactId>
         <groupId>com.github.ehrbase.openEHR_SDK</groupId>
-        <version>1.5.0</version>
+        <version>1.5.0-fix-serialization</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
