--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <groupId>com.github.ehrbase.openEHR_SDK</groupId>
     <artifactId>root</artifactId>
     <packaging>pom</packaging>
-    <version>1.5.0-fix-serialization</version>
+    <version>1.5.0</version>
 
     <modules>
         <module>client</module>
